sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:9: error: not found: value plusGrand
      if (plusGrand(i,j)) echange(i,j);
          ^